# SurMaya.AI-

./: .env.example  README.md  metadata.json  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: AudioGraphEvaluator.h  LockFreeSPSCQueue.h  NativeAudioEngine.h  ProjectFormat.h  SamplePlaybackEngine.h
app/src/main/cpp/dsp/: BiquadFilter.h  ChannelStrip.h  Compressor.h  Delay.h  MasteringLimiter.h  MixerBusEngine.h  ParametricEQ.h  Reverb.h
app/src/main/cpp/interpreter/: InstrumentPersonality.h  PerformanceInterpreter.h  SingerExpressionEngine.h  StyleRenderer.h
app/src/main/cpp/jni/: AIREJniBridge.cpp
docs/adr/: ADR-001_Clean_Architecture.md  ADR-002_Manual_Service_Locator.md  ADR-003_Canonical_Music_Representation.md  ADR-004_Offline_First_AI_Strategy.md  ADR-005_AI_Gateway_Abstraction.md  ADR-006_AI_Vocal_Intelligence_Engine.md  DECISIONS_ARCHIVE.md
docs/architecture/: AI_GATEWAY_ARCHITECTURE_v1.md  ARCHITECTURE.md  MODULE_DEPENDENCIES.md
docs/audits/: AUDIT_REPORT_INSTRUMENT_v1_0.md  AUDIT_REPORT_MASTERING_v1_0.md  AUDIT_REPORT_v1.md  AUDIT_REPORT_v1_1.md
docs/qa_certification_lab/: ACCEPTANCE_TEST_REPORTS.md  CHANGELOG.md  DEVICE_COMPATIBILITY_MATRIX.md  PERFORMANCE_BENCHMARKS.md  README.md  REGRESSION_TEST_REPORTS.md
docs/release/: V1_0_RC2_RELEASE_REPORT.md
docs/roadmaps/: CHANGELOG.md  COMPATIBILITY_MATRIX.md  KNOWN_LIMITATIONS.md  ROADMAP.md  TECH_DEBT.md
docs/specifications/: AIRE_IMPLEMENTATION_SPECIFICATIONS_v1_3.md  AIRE_SOFTWARE_DESIGN_DOCUMENT_v1_3.md  API_PROVIDER_INTERFACE.md  (+5 more)
(+200 files in other folders)
